--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     hostname: gitlab
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.127.0.0.1.nip.io'
-        gitlab_rails['initial_root_password'] = 'DkMP22g2BX'
+        external_url 'http://gitlab.127.0.0.1.nip.io';
+        gitlab_rails['initial_root_password'] = 'DkMP22g2BX';
     ports:
       - '80:80'
       - '443:443'
