fix(release): add tag container build

--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -2,8 +2,10 @@ name: container build
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - '**'
+      - '!master'
+    tags:
+      - '**'
   schedule:
     - cron: '0 0 * * *'
 jobs:
